# python-project-lvl4

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  requirements.txt   setup.cfg
.github/workflows/: python-ci.yml
root/: tests.py  urls.py  views.py
root/locale/ru/LC_MESSAGES/: django.mo  django.po
root/templates/: root.html
task_manager/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/locale/ru/LC_MESSAGES/: django.mo  django.po
users/migrations/: 0001_initial.py  0002_auto_20210610_0123.py  0003_auto_20210611_1724.py  0004_tasks_description.py  0005_alter_tasks_description.py  0006_alter_tasks_user.py  0007_labels.py  0008_auto_20210615_0010.py  0009_auto_20210615_0020.py
users/templates/: base.html
users/templates/labels/: label_create.html  label_delete.html  label_read.html  label_update.html
users/templates/registration/: create.html  login.html
users/templates/statuses/: status_create.html  status_delete.html  status_read.html  status_update.html
users/templates/tasks/: task_create.html  task_delete.html  task_read.html  task_update.html  task_view.html
users/templates/users/: delete.html  users.html
