[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Metaller <metaller7440326@gmail.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
python-dotenv = "^0.12.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

