[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Metaller <metaller7440326@gmail.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
python-dotenv = "^0.16.0"
rollbar = "^0.14.7"
django-bootstrap4 = "^1.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

